change method to add bundles

--- a/snippets/ss-header.liquid
+++ b/snippets/ss-header.liquid
@@ -24,7 +24,7 @@
           </a>
 
 
-          <a class="nav-secondary__item" href="https://shop.supersod.com/account">My Account</a>
+          <a class="nav-secondary__item" href="/account">My Account</a>
 
 
           <a href="https://www.supersod.com/storelocator" class="nav-secondary__item nav-secondary__store unstyled"
@@ -126,7 +126,7 @@
             <ul class="navbar-menu">
 
               <li class="navbar-menu__parent">
-                <a class="navbar-menu__parent-link" href="https://shop.supersod.com">Shop</a>
+                <a class="navbar-menu__parent-link" href="/">Shop</a>
 
               </li>
 
@@ -408,7 +408,7 @@
           <div id="hs_cos_wrapper_header_cta"
             class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module navbar__cta-wrapper" style=""
             data-hs-cos-general-type="widget" data-hs-cos-type="module">
-            <a class="navbar__cta button button--secondary" href="https://shop.supersod.com/">
+            <a class="navbar__cta button button--secondary" href="/">
               Order Sod Online 😎
             </a>
           </div>
@@ -428,7 +428,7 @@
 
 
 
-          <a href="https://shop.supersod.com/" class="tapbar__link">
+          <a href="/" class="tapbar__link">
             <img src="//www.supersod.com/hubfs/raw_assets/public/2020-super-sod/images/icon-shop--dark-green.svg" alt=""
               class="tapbar__icon">
             <span class="tapbar__text">shop</span>
@@ -442,7 +442,7 @@
           </a>
 
 
-          <a href="https://shop.supersod.com/cart" class="tapbar__link">
+          <a href="/cart" class="tapbar__link">
             <img src="//www.supersod.com/hubfs/raw_assets/public/2020-super-sod/images/icon-cart--dark-green.svg" alt=""
               class="tapbar__icon">
             <span class="tapbar__text">cart</span>
@@ -514,7 +514,7 @@
                     </svg></span>
                   <div class="ss-mm__quick-link-text">locations</div>
                 </a>
-                <a class="ss-mm__quick-link" href="https://shop.supersod.com/">
+                <a class="ss-mm__quick-link" href="/">
                   <img class="ss-mm__quick-link-icon"
                     src="//www.supersod.com/hubfs/raw_assets/public/2020-super-sod/images/icon-online-store.svg" alt=""
                     height="27" aria-hidden="true" loading="lazy" style="height: 27px; width: auto;">
@@ -529,7 +529,7 @@
               </div>
               <div class="ss-mm__track">
 
-                <a class="ss-mm__product-category" href="https://shop.supersod.com/collections/sod">
+                <a class="ss-mm__product-category" href="/collections/sod">
                   <figure>
                     <img
                       src="https://www.supersod.com/hs-fs/hubfs/Product%20Images/category-sod.png?height=63&amp;name=category-sod.png"
@@ -538,7 +538,7 @@
                   <hr>
                   <span class="ss-mm__product-category-title">Sod</span>
                 </a>
-                <a class="ss-mm__product-category" href="https://shop.supersod.com/collections/soil3">
+                <a class="ss-mm__product-category" href="/collections/soil3">
                   <figure>
                     <img
                       src="https://www.supersod.com/hs-fs/hubfs/Soil3-BYB-Big_Yellow_Bag.png?height=63&amp;name=Soil3-BYB-Big_Yellow_Bag.png"
@@ -547,7 +547,7 @@
                   <hr>
                   <span class="ss-mm__product-category-title">Soil<sup>3</sup> Compost</span>
                 </a>
-                <a class="ss-mm__product-category" href="https://shop.supersod.com/collections/grass-seed">
+                <a class="ss-mm__product-category" href="/collections/grass-seed">
                   <figure>
                     <img
                       src="https://www.supersod.com/hs-fs/hubfs/Product%20Images/category-sod.png?height=63&amp;name=category-sod.png"
@@ -556,7 +556,7 @@
                   <hr>
                   <span class="ss-mm__product-category-title">Grass Seed</span>
                 </a>
-                <a class="ss-mm__product-category" href="https://shop.supersod.com/collections/automowers">
+                <a class="ss-mm__product-category" href="/collections/automowers">
                   <figure>
                     <img
                       src="https://cdn2.hubspot.net/hub/3023500/hubfs/Automower/automower-450x-model.jpg?height=63&amp;name=automower-450x-model.jpg"
