get prod changes (2021-06-21)

--- a/snippets/ss-head-assets.liquid
+++ b/snippets/ss-head-assets.liquid
@@ -13,5 +13,5 @@
 <link rel="stylesheet" href="//cdn2.hubspot.net/hub/3023500/hub_generated/template_assets/33588449487/1615478052354/2020-super-sod/coded_files/css/styles.min.css">
 <link rel="stylesheet" href="//cdn2.hubspot.net/hub/3023500/hub_generated/template_assets/33589079666/1617915388297/2020-super-sod/coded_files/css/ss-header.min.css">
 <link rel="stylesheet" href="https://cdn2.hubspot.net/hub/-1/hub_generated/module_assets/-2712622/1615829188482/module_-2712622_Site_Search_Input.min.css">
-<link rel="stylesheet" href="https://cdn2.hubspot.net/hub/3023500/hub_generated/module_assets/33589221446/1613768162919/module_33589221446_tapbar.min.css">
+<link rel="stylesheet" href="https://www.supersod.com/hs-fs/hub/3023500/hub_generated/module_assets/33589221446/1623870541218/module_33589221446_tapbar.min.css">
 <link rel="stylesheet" href="https://cdn2.hubspot.net/hub/3023500/hub_generated/module_assets/33588266410/1613768160568/module_33588266410_ss-mobile-menu.min.css">
