get live code (2021-06-28)

--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -504,12 +504,12 @@
                     <div class="cart__date-picker-container js-tail-datetime-holder-1"></div>
                   </div>
                   <div class="grid__item medium-up--one-third">
-                    <label for="delivery-date-2">Date 2</label>
+                    <label for="delivery-date-2">Date 2 (scroll to next month, if needed)</label>
                     <input id="delivery-date-2" type="text" name="attributes[_date_2]" class="form__input form__input--date js-tail-datetime-field-2" readonly required>
                     <div class="cart__date-picker-container js-tail-datetime-holder-2"></div>
                   </div>
                   <div class="grid__item medium-up--one-third">
-                    <label for="delivery-date-3">Date 3</label>
+                    <label for="delivery-date-3">Date 3 (scroll to next month, if needed)</label>
                     <input id="delivery-date-3" type="text" name="attributes[_date_3]" class="form__input form__input--date js-tail-datetime-field-3" readonly required>
                     <div class="cart__date-picker-container js-tail-datetime-holder-3"></div>
                   </div>
