--- a/sections/ss-footer.liquid
+++ b/sections/ss-footer.liquid
@@ -197,7 +197,8 @@
       Copyright © 2021 Patten Seed Co. 
       <a href="//www.supersod.com/privacy-policy/">Privacy Policy</a>.
       <a href="https://shop.supersod.com/55488970961/policies/terms-of-service.html">Terms of Service</a>.
-      <a href="https://shop.supersod.com/55488970961/policies/refund-policy.html">Refund Policy</a>.
+      <a href="https://shop.supersod.com/55488970961/policies/refund-policy.html">Refund/Return Policy</a>.
+      <a href="https://shop.supersod.com/55488970961/policies/shipping-policy.html">Shipping Policy</a>.
     </div>
   </section>
 </footer>
