--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -309,6 +309,29 @@
         </select>
       </div>
 
+    {% comment %} SSOD-235 Show Question for Essential and Champ Products ONLY {% endcomment %}
+      {% if product.tags contains 'ask-planted-12m' %}
+      {%- assign has-lawn-planted = true -%}
+      <p class="lawn-planted-question">Was your lawn planted in the last 12 months?*</p>
+      <div class="lawn-planted">
+
+        <div class="text-group-field">
+          <div class="inner-block">
+            <input type="radio" name="properties[_lawn_planted]" value="yes" class="radio-custom" id="lawn-planted-yes">
+            <label for="lawn-planted-yes" class="radio-custom-label">Yes</label>
+          </div>
+        </div>
+
+        <div class="text-group-field">
+          <div class="inner-block">
+            <input type="radio" name="properties[_lawn_planted]" value="no" class="radio-custom" id="lawn-planted-no">
+            <label for="lawn-planted-no" class="radio-custom-label">No</label>
+          </div>
+        </div>
+
+      </div>  
+      {% endif %}
+    {% comment %} End SSOD-235 {% endcomment %}
       <div class="flex flex--row flex--wrap flex--has-gutter flex--vertical-bottom" style="margin-bottom: 1em;">
         {% if section.settings.product_quantity_enable %}
           <div class="flex__item col-{% if uses_normal_toggle == true or use_variant_toggle == true %}3{% else %}4{% endif %}">
@@ -374,13 +397,14 @@
               {%- endunless -%}
 
             {%- else -%}
-            <button type="submit" name="add" id="AddToCart" class="js-product-submit button button--medium button--secondary product-single__cart-submit btn--full{% if section.settings.enable_payment_button %} shopify-payment-btn btn--secondary{% endif %}" data-cart-url="{{ routes.cart_url }}">
+            <button type="submit" name="add" id="AddToCart" class="js-product-submit js-lawn-planted button button--medium button--secondary product-single__cart-submit btn--full{% if section.settings.enable_payment_button %} shopify-payment-btn btn--secondary{% endif %}" data-cart-url="{{ routes.cart_url }}">
               <span id="AddToCartText">{{ 'products.product.add_to_cart' | t }}</span>
             </button>
             {%- endif -%}
           </div>
         </div>
       </div>
+        <p class="lawn-planted-warning lawn-planted-warning-hide" id="lawn-planted-warning">please answer the lawn question*</p>
       <div>
         {% if use_pallet == true or use_check == true %}
           <div class="product-locations-dropdown js-quantity-block js-pickup-quantity-block hide">
