--- a/assets/product.scss
+++ b/assets/product.scss
@@ -230,11 +230,21 @@ button[class*="bold-ro__custombutton-"] + .btn--full {
   display: none;
 }
 
-/* ask lawn planted BOX  */
-/* -------------------- */
+/* ask lawn planted styles */
 .lawn-planted-question {
   font-size: 0.75rem;
   margin-top: 15px;
+
+  @media (min-width: 768px) {
+    font-size: 16px;
+    margin-top: 15px;
+  }
+}
+
+.radio-custom-wraper {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 20px;
 }
 
 .radio-custom {
@@ -249,18 +259,16 @@ button[class*="bold-ro__custombutton-"] + .btn--full {
 .radio-custom-label {
   background-color: lightgray;
   height: 45px;
-  width: 43vw;
+  width: 95%;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 16px !important;
   border-radius: 25px;
   transition: all 0.3s ease-in-out;
-}
-
-.radio-custom-label:last-child {
-  margin-right: 10px;
-  margin-bottom: 20px;
+  &:hover {
+    background-color: #afc9b6;
+  }
 }
 
 .product-form label {
@@ -271,24 +279,16 @@ button[class*="bold-ro__custombutton-"] + .btn--full {
   display: none;
 }
 
+.lawn-planted-warning-wraper {
+  display: flex;
+  justify-content: center;
+  @media (min-width: 768px) {
+    justify-content: left;
+  }
+}
+
 .lawn-planted-warning {
   font-size: 12px;
   color: red;
   text-align: center;
-}
-
-@media (min-width: 768px) {
-  .lawn-planted-question {
-    font-size: 16px;
-    margin-top: 15px;
-  }
-  .lawn-planted-warning {
-    margin-left: 35%;
-  }
-}
-
-@media (min-width: 900px) {
-  .radio-custom-label {
-    width: 19vw;
-  }
 }
