--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -406,7 +406,7 @@
 
       <div class="flex flex--row">
         <div class="flex__item col-12 lawn-planted-warning-wraper">
-          <span class="js-lawn-planted-warning lawn-planted-warning-hide">{{ 'products.product.answer_the_question_warning' | t }}</span>
+          <span class="lawn-planted-warning lawn-planted-warning-hide js-lawn-planted-warning">{{ 'products.product.answer_the_question_warning' | t }}</span>
         </div>
       </div>
 
