--- a/assets/product.scss
+++ b/assets/product.scss
@@ -50,9 +50,10 @@ $desk: 1100px;
   margin-top: 30px;
   padding: 10px 11px;
 
-  a {
+  a, .clickable{
     color: $color_primary;
     text-decoration: underline;
+    cursor: pointer;
   }
 }
 
