--- a/assets/product.scss
+++ b/assets/product.scss
@@ -50,7 +50,7 @@ $desk: 1100px;
   margin-top: 30px;
   padding: 10px 11px;
 
-  a, .clickable{
+  a{
     color: $color_primary;
     text-decoration: underline;
     cursor: pointer;
